Stage - 1 APK built

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>School App</title>
+    <title>St Marys School</title>
 
     <base href="/" />
 
