FCM Service Worker, installed through Service Worker. PostCard empty URL list bug fixed.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>St Marys School</title>
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <base href="/" />
 
@@ -10,6 +11,11 @@
     <meta
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="St Marys School App to get instant updates."
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
@@ -19,7 +25,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="%PUBLIC_URL%/assets/icon/favicon.png"
+      href="%PUBLIC_URL%/favicon.ico"
     />
 
     <!-- add to homescreen for ios -->
@@ -27,9 +33,11 @@
     <meta name="apple-mobile-web-app-title" content="School App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="apple-touch-icon" href="./assets/icon/icon.png" />
+    <title>St Marys School</title>
   </head>
 
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
